<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Actors</string>

    <string name="activity_main_name">Main Activity</string>
    <string name="activity_main_toolbar_title">Toolbar Title</string>

    <string name="activity_settings_name">Settings Activity</string>

    <string name="fragment_detail_buy">Buy</string>




    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">This application is made by Danijela Karaklic</string>
    <string name="dialog_about_yes">OK</string>
    <string name="dialog_about_no">Cancel</string>

    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically if Wi-fi is available</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sync_list">pref_sync_list</string>
    <string name="detail_activity">Detail Activity</string>
    <string name="pref_edit">pref_edit</string>
    <string name="dialog_insert_name">Insert name of actor</string>
    <string name="dialog_insert_surname">Insert surname of an actor</string>
    <string name="dialog_insert_rating">Insert rating</string>
    <string name="dialog_insert_biogrphy">Insert biogrphy</string>
    <string name="dialog_insert_birthday">Insert birthday</string>
    <string name="dialog_isert_ok">OK</string>
    <string name="dialog_insert_cancel">CANCEL</string>
    <string name="dialog_insert_name_of_film">Insert name of film</string>
    <string name="dialog_insert_genre">Insert genre</string>
    <string name="dialog_insert_year_of_release">Insert year of release</string>


</resources>