<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:minHeight="200dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_insert_name"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/actor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_insert_surname"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/actor_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_insert_rating"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/actor_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_insert_biogrphy"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/actor_biography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_insert_birthday"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/actor_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>




    <!--  <EditText
          android:id="@+id/product_rating"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="16sp"/>-->



    <!--  <Spinner
          android:id="@+id/sp_dialog_images"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">


      </Spinner>-->
  <!--  <Button
        android:id="@+id/btn_browse_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:foregroundGravity="center_horizontal"/>
    <ImageView
        android:id="@+id/selected_image_from_gallery"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/sp_dialog_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Spinner>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_isert_ok"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_insert_cancel"/>




    </LinearLayout>





</LinearLayout>